# livetable

./: .gitignore  CLAUDE.md  LICENSE  QUICK_START.md  README.md  live_demo.py  live_demo_ws.py
.github/workflows/: ci.yml
benchmarks/: analyze_filter_perf.py  benchmark.py  benchmark_results.json  benchmark_results_python.json  benchmark_vs_pandas.py  bottleneck_analysis.py  filter_vs_pandas.py  rust_benchmark_output.txt
docs/: API_GUIDE.md  GETTING_STARTED.md  JOIN_FEATURE.md  ORIGINAL_VISION.md  PERFORMANCE_COMPARISON.md  PYTHON_BINDINGS_README.md  START_HERE.md
docs/plans/: 2026-02-18-percentile-quantile-design.md
docs/superpowers/plans/: 2026-03-14-right-full-joins.md  2026-06-28-server-view-pipeline-backend.md
docs/superpowers/specs/: 2026-03-14-right-full-joins-design.md  2026-06-28-server-view-pipeline-design.md
examples/: demo_llm_analytics.py  demo_reactive_propagation.py  playground.py  quickstart.py  run.sh  scratch.py  streaming_publisher.py  test_python_bindings.py
frontend/: create-all-files.sh  eslint.config.js  index.html  package-lock.json  package.json  setup-frontend.sh
frontend/src/: App.tsx  types.ts  vite-env.d.ts
frontend/src/components/: DataTable.tsx  LiveTable.test.tsx  LiveTable.tsx
frontend/src/hooks/: useTableWebSocket.test.tsx  useTableWebSocket.ts
frontend/src/lib/: liveTableDraftRow.ts
impl/: Cargo.toml  build.sh  install.sh  pyproject.toml
impl/benches/: livetable_benchmarks.rs
impl/examples/: basic_table.rs  joins.rs  performance.rs  views.rs
impl/src/: changeset.rs  column.rs  expr.rs  interner.rs  lib.rs  messages.rs  pipeline_spec.rs  python_bindings.rs  readable.rs  sequence.rs  server.rs  table.rs  view.rs  websocket.rs
impl/src/python_bindings/: conversions.rs  iterators.rs
impl/src/view/: aggregate.rs  aggregate_support.rs  computed.rs  filter.rs  join.rs  projection.rs  sorted.rs  tests.rs  tickable.rs
impl/tests/: forward_prop_fuzz.rs
tests/: README.md  pytest.ini  requirements.txt  run_all.sh
tests/integration/: test_end_to_end.py
tests/python/: test_aggregations.py  test_bulk_operations.py  test_changeset_compaction.py  test_date_types.py  test_filter_expr.py  test_iterator.py  test_multi_column_join.py  test_pandas_interop.py  test_percentile.py  test_pythonic_indexing.py  test_right_full_joins.py  test_serialization.py  test_simplified_api.py  test_sorted_view.py  test_string_interning.py  test_table_operations.py  test_tick.py  test_view_composition.py  test_views.py
(+2 files in other folders)
