[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "livetable"
version = "0.1.0"
description = "High-performance columnar table system with reactive views and incremental updates"
authors = [{name = "LiveTable Contributors"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
repository = "https://github.com/beeblebroxz/livetable"

[tool.maturin]
module-name = "livetable"
bindings = "pyo3"
features = ["python"]
